# records-typeable

./: README  records-typeable.cabal
src/Data/Record/: Eq.hs  Typeable.hs
